# whois-pretty

./: README.md  pyproject.toml
src/whois/: __init__.py
src/whois_pretty/: __init__.py
